--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -15,23 +15,9 @@
 
 .my-masonry-grid_column > div > a {
   display: block;
-  padding: 20px;
-  color: #666;
-  text-decoration: none;
-  background: #ddd;
+  transition: transform 0.3s ease-in-out;
 }
 
 .my-masonry-grid_column > div > a:hover {
-  color: #000;
-  background: #ccc;
-}
-
-.charImg {
-  width: 100%;
-}
-
-.charName {
-  padding: 10px 0;
-  font-size: 16px;
-  font-weight: bold;
+  transform: scale(1.05);
 }
